[tool.poetry]
name = "course-work-1"
version = "0.1.0"
description = ""
authors = ["Marina <lav_mari@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
load-dotenv = "^0.1.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.12.0"
isort = "^5.13.2"
black = "^24.10.0"



[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[tool.black]
line-length = 119
exclude = '''
/(
  \.git
)/
'''


[tool.isort]
line_length = 119


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
